Share modal overlapping - fix

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,1 +1,3 @@
-
+#initShareFile {
+  z-index: 10500 !important;
+}
